--- a/style/style.css
+++ b/style/style.css
@@ -332,6 +332,15 @@
 }
 
 
+.section-4-scroll{
+    overflow:scroll;
+    overflow-x: hidden;
+    scrollbar-color: red;
+    width: 340px;
+    height: 228px;
+    margin: 0 auto;
+
+}
 .section-4-prize{
 width: 316px;
 height: 36px;
@@ -463,9 +472,13 @@ margin-bottom: 5px;
 /* section 5*/
 .main-section-5{
     max-width: 940px;
-    height: 500px;
+    height: 550px;
     background-color: #141529;
     margin: 0 auto;
+}
+
+.main-section-5-p{
+    margin-left: 55px;
 }
 .main-section-5-p1{
 font-size: 29px;
@@ -480,12 +493,52 @@ padding-top: 70px;
     }
 
 
+.main-slider{
+    max-width: 880px;
+    width: 100%;
+    height: auto;
+    display: flex;
+   
+    margin-left: 55px;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    scroll-padding-bottom: 15px;
+    position: relative;
+   
+}
+
+.image-box{
+   
+    max-width: 192px;
+    width: 100%;
+    height: 224px;
+    border-radius: 13px;
+    margin-left: 15px;
+    position: relative;
+    z-index: 1;
+    padding-top: 10px;
+   margin-bottom: 50px;
+   margin-right: 16px;
+ 
+}
+
+.image-box img{
+    border-radius: 15px;
+}
+
+
+
+
+
+
+
+
 
     /*section-6*/
     .main-section-6{
         max-width: 940px ;
           width: 100%;
-          height: 316px;
+          height: 380px;
           margin: 0 auto;
           display: flex;
           flex-direction: column;
@@ -511,18 +564,22 @@ padding-top: 70px;
         
     }
 
-   .section-6-terms-1{
+   .section6-button{
        width: 855px;
        height: 60px;
-       background-color: #9a9a9aa7;
+       background-color: #9a9a9a66;
        display: flex;
        justify-content: space-between;
        margin-bottom: 10px;
        border-radius: 5px;
+       border-style: none;
+       margin: 15px auto;
+       cursor: pointer;
        
    }
-   .section-6-terms-1:hover{
-    background-color:#F19020;
+   .section6-button:hover{
+    background: rgb(208,137,31);
+background: linear-gradient(90deg, rgba(208,137,31,1) 3%, rgba(219,135,38,0.8550770650056898) 39%, rgba(231,167,28,0.8214636196275386) 65%, rgba(230,150,40,0.8802871490393032) 100%);
     cursor: pointer;
 
  }
@@ -535,9 +592,33 @@ padding-top: 70px;
 
    }
    
-   .section-6-p2{
-       font-size: 25px;
+   .section-6-icon{
+      background-image: url(../assets/Vector\ Smart\ Object\ copy\ 22.svg);
+      background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+    margin-top: 10px;
    }
+
+   .terms{
+       max-width: 855px;
+          width: 100%;
+          height: 25px;
+          background: rgb(231,147,28);
+background: linear-gradient(90deg, rgba(231,147,28,0.9587185215883228) 31%, rgba(230,167,40,0.9279061966583508) 100%);
+          color: #141529;
+     text-align: center;
+          border-radius: 15px;
+          
+          margin: 10px auto;
+          padding-top: 5px;
+      display: none;
+      margin: 0 auto;
+        }
    
 
    
@@ -748,3 +829,7 @@ margin-bottom: 5px;
    color: #9A9A9A;
    margin: 25px auto;
 }
+
+
+
+
